<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#ffffff">
    
	<!-- hearder 头部标签布局 -->
	<RelativeLayout android:id="@+id/rel_layout_header"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:layout_alignParentTop="true"
	    android:gravity="center_vertical"
	    android:background="@drawable/title_bar">
	    
	    <ImageView 
	        android:id="@+id/customer_detail_back"
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:background="@drawable/about_showleft_selector"/>
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/customer_detail"
	        android:textSize="18sp"
	        android:layout_marginTop="10dp"
	        android:layout_centerHorizontal="true"
	        android:textColor="#ffffff"/>
	    
        <TextView 
            android:id="@+id/edit_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="编辑"
            android:textSize="14.5sp"
            android:paddingRight="10dp"
	        android:textColor="#ffffff"/>
	</RelativeLayout>
    
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    
	        <View
	            android:layout_width="match_parent"
	            android:layout_marginTop="5dp"
	            android:layout_height="0.5dp"
	            android:background="#ffcccccc" />
	        
		    <RelativeLayout 
		        android:layout_width="match_parent"
		        android:layout_height="40dp">
		        
		        <RelativeLayout android:id="@+id/rlLayout"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_marginLeft="30dp">
		            
		            <TextView 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_centerVertical="true"
		                android:text="@string/customer_name"
		                android:textColor="#666666"/>
		        </RelativeLayout>
		        <View  android:id="@+id/view"
				    android:layout_width="1dp" 
				    android:layout_height="wrap_content"
				    android:background="#ffcccccc"
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="8dp"
				    android:layout_marginLeft="30dp"
				    android:layout_marginRight="8dp"
				    android:layout_gravity="center_horizontal"
				    android:layout_toRightOf="@+id/rlLayout"/>
		        
		        <TextView android:id="@+id/customerName" 
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_margin="10dp"
		            android:layout_toRightOf="@+id/view"
		            android:gravity="center_vertical"
		            android:textColor="#000000"
		            android:text=""
		            android:textSize="14sp"/>
		    </RelativeLayout>
		    
		    <View
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:background="#ffcccccc" />
		    
		    <RelativeLayout 
		        android:layout_width="match_parent"
		        android:layout_height="40dp">
		        
		        <RelativeLayout android:id="@+id/rlLayout_code"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_marginLeft="30dp">
		            
		            <TextView 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_centerVertical="true"
		                android:text="@string/customer_code"
		                android:textColor="#666666"/>
		        </RelativeLayout>
		        <View  android:id="@+id/view_code"
				    android:layout_width="1dp" 
				    android:layout_height="wrap_content"
				    android:background="#ffcccccc"
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="8dp"
				    android:layout_marginLeft="30dp"
				    android:layout_marginRight="8dp"
				    android:layout_gravity="center_horizontal"
				    android:layout_toRightOf="@+id/rlLayout_code"/>
		        
		        <TextView android:id="@+id/customerCode" 
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_margin="10dp"
		            android:layout_toRightOf="@+id/view_code"
		            android:gravity="center_vertical"
		            android:text=""
		            android:textColor="#000000"
		            android:textSize="14sp"/>
		    </RelativeLayout>
		    
		    <View
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:background="#ffcccccc" />
		    
		    
		    <RelativeLayout 
		        android:layout_width="match_parent"
		        android:layout_height="40dp">
		        
		        <RelativeLayout android:id="@+id/rlLayout_type"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_marginLeft="30dp">
		            
		            <TextView 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_centerVertical="true"
		                android:text="@string/customer_type"
		                android:textColor="#666666"/>
		        </RelativeLayout>
		        <View  android:id="@+id/view_type"
				    android:layout_width="1dp" 
				    android:layout_height="wrap_content"
				    android:background="#ffcccccc"
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="8dp"
				    android:layout_marginLeft="30dp"
				    android:layout_marginRight="8dp"
				    android:layout_gravity="center_horizontal"
				    android:layout_toRightOf="@+id/rlLayout_type"/>
		        
		        <TextView android:id="@+id/customerType" 
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_margin="10dp"
		            android:layout_toRightOf="@+id/view_type"
		            android:gravity="center_vertical"
		            android:text=""
		            android:textColor="#000000"
		            android:textSize="14sp"/>
		    </RelativeLayout>
		    
		    <View
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:background="#ffcccccc" />
		    
		    <RelativeLayout 
		        android:layout_width="match_parent"
		        android:layout_height="40dp">
		        
		        <RelativeLayout android:id="@+id/rlLayout_contact"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_marginLeft="16dp">
		            
		            <TextView 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_centerVertical="true"
		                android:text="@string/customer_contact"
		                android:textColor="#666666"/>
		        </RelativeLayout>
		        <View  android:id="@+id/view_contact"
				    android:layout_width="1dp" 
				    android:layout_height="wrap_content"
				    android:background="#ffcccccc"
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="8dp"
				    android:layout_marginLeft="30dp"
				    android:layout_marginRight="8dp"
				    android:layout_gravity="center_horizontal"
				    android:layout_toRightOf="@+id/rlLayout_contact"/>
		        
		        <TextView android:id="@+id/contactName"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_margin="10dp"
		            android:textColor="#000000"
		            android:layout_toRightOf="@+id/view_contact"
		            android:gravity="center_vertical"
		            android:textSize="14sp"/>
		    </RelativeLayout>
		    
		    <View
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:background="#ffcccccc" />
		    
		    <RelativeLayout 
		        android:layout_width="match_parent"
		        android:layout_height="40dp">
		        
		        <RelativeLayout android:id="@+id/rlLayout_area"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_marginLeft="16dp">
		            
		            <TextView 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_centerVertical="true"
		                android:text="@string/customer_area"
		                android:textColor="#666666"/>
		        </RelativeLayout>
		        <View  android:id="@+id/view_area"
				    android:layout_width="1dp" 
				    android:layout_height="wrap_content"
				    android:background="#ffcccccc"
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="8dp"
				    android:layout_marginLeft="15dp"
				    android:layout_marginRight="8dp"
				    android:layout_gravity="center_horizontal"
				    android:layout_toRightOf="@+id/rlLayout_area"/>
		        
		        <TextView android:id="@+id/customerArea"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_margin="10dp"
		            android:layout_toRightOf="@+id/view_area"
		            android:gravity="center_vertical"
		            android:text=""
		            android:textColor="#000000"
		            android:textSize="14sp"/>
		    </RelativeLayout>
		    
		    <View
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:background="#ffcccccc" />
		    
		    <RelativeLayout 
		        android:layout_width="match_parent"
		        android:layout_height="40dp">
		        
		        <RelativeLayout android:id="@+id/rlLayout_address"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_marginLeft="16dp">
		            
		            <TextView 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_centerVertical="true"
		                android:text="@string/customer_detail_address"
		                android:textColor="#666666"/>
		        </RelativeLayout>
		        
		        <View  
		            android:id="@+id/view_address"
				    android:layout_width="1dp" 
				    android:layout_height="wrap_content"
				    android:background="#ffcccccc"
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="8dp"
				    android:layout_marginLeft="15dp"
				    android:layout_marginRight="8dp"
				    android:layout_gravity="center_horizontal"
				    android:layout_toRightOf="@+id/rlLayout_address"/>
		        
		        <TextView android:id="@+id/customerAddress"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_margin="10dp"
		            android:textColor="#000000"
		            android:layout_toRightOf="@+id/view_address"
		            android:textSize="14sp"/>
		    </RelativeLayout>
		    
		    <View
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:background="#ffcccccc" />
		    
		    <View
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:layout_marginTop="20dp"
	            android:background="#ffcccccc" />
		    
		    <RelativeLayout 
		        android:layout_width="match_parent"
		        android:layout_height="40dp">
		        
		        <RelativeLayout android:id="@+id/rl_layout_mobile"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_marginLeft="30dp">
		            
		            <TextView 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_centerVertical="true"
		                android:text="@string/customer_mobile"
		                android:textColor="#666666"/>
		        </RelativeLayout>
		        <View  android:id="@+id/mobile_view"
				    android:layout_width="1dp" 
				    android:layout_height="wrap_content"
				    android:background="#ffcccccc"
				    android:layout_marginTop="8dp"
				    android:layout_marginBottom="8dp"
				    android:layout_marginLeft="30dp"
				    android:layout_marginRight="8dp"
				    android:layout_gravity="center_horizontal"
				    android:layout_toRightOf="@+id/rl_layout_mobile"/>
		        
		        <TextView android:id="@+id/customerMobile"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_margin="10dp"
		            android:layout_toRightOf="@+id/mobile_view"
		            android:gravity="center_vertical"
		            android:textColor="#000000"
		            android:textSize="14sp"/>
		    </RelativeLayout>
		    
		    <View
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:background="#ffcccccc" />
		    
		    <View
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:background="#ffcccccc" />
		    
		    <RelativeLayout android:id="@+id/rlayout"
		        android:layout_width="match_parent"
		        android:layout_height="120dp">
		            
	            <ImageView 
	                android:id="@+id/customer_detail_img"
		            android:layout_width="130dp"
		            android:layout_height="120dp"
		            android:layout_marginLeft="10dp"
		            android:layout_marginTop="15dp"
		            android:src="@drawable/no_pic_300"
		            android:layout_gravity="left" />
		    </RelativeLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
